--- a/www/login.html
+++ b/www/login.html
@@ -10,7 +10,7 @@
                  <input id="login" placeholder="E-mail" class="form" required>
                  <input id="password"  placeholder="Пароль"  type="password" required>
                  <input value="Войти" type="button" id="btn-singin">
-                 <span id="reg">Еще не зарегестрированны? <a href="#">Регистрация</a></span>
+                 <span id="reg">Еще не зарегестрированны? <a href="reg.html">Регистрация</a></span>
              </div>
         </form>
         <span id="E-mail_hint">E-mail</span>
